disable dragging of the menu to avoid flickering

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,7 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  -webkit-backface-visibility: hidden;
 }
 
 .main-view > .container {
