--- a/app/assets/stylesheets/drawer.css.scss
+++ b/app/assets/stylesheets/drawer.css.scss
@@ -1,6 +1,7 @@
 .drawer {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+  -webkit-backface-visibility: hidden;
   height:100%;
   
   position:absolute;
